--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "a restaurant application that lets users input the names of burgers they'd like to eat!",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/paradigm1984/burger.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/paradigm1984/burger/issues"
-  },
+  
   "homepage": "https://github.com/paradigm1984/burger#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
