--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "type": "git",
     "url": "git+https://github.com/paradigm1984/burger.git"
   },
-  
   "homepage": "https://github.com/paradigm1984/burger#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
@@ -19,5 +18,8 @@
     "handlebars": "^4.0.10",
     "method-override": "^2.3.9",
     "mysql": "^2.13.0"
+  },
+  "devDependencies": {
+    "webpack": "^3.5.5"
   }
 }
